--- a/src/index.css
+++ b/src/index.css
@@ -21,37 +21,37 @@ code {
   color: #2196f3;
   margin-bottom: 2px;
 } */
-.home .post {
+/* .home .post {
   border: 1px solid #e1e1e1;
   padding: 10px 10px;
   border-radius: 5px;
   margin-top: 10px;
-}
-.home .post a {
+} */
+/* .home .post a {
   text-decoration: none;
-}
-.home .post h3 {
+} */
+/* .home .post h3 {
   margin: 0;
   padding: 0;
   font-size: 25px;
   font-weight: bold;
   color: black;
-}
-.home .post h3:hover {
+} */
+/* .home .post h3:hover {
   color: #2196f3;
-}
-.home .post p {
+} */
+/* .home .post p {
   font-size: 13px;
-}
+} */
 
 #blog-by {
   text-align: center;
   font-style: italic;
   margin-bottom: 20px;
 }
-.post-detail h1 {
+/* .post-detail h1 {
   text-align: center;
-}
+} */
 #nav {
   list-style-type: none;
   padding: 0;
@@ -60,13 +60,13 @@ code {
 #nav li {
   margin-left: 10px;
 }
-#nav li a {
+/* #nav li a {
   text-decoration: none;
   color: #9e9e9e;
-}
-#nav li a:hover {
+} */
+/* #nav li a:hover {
   text-decoration: underline;
-}
+} */
 .create-post h1 {
   text-align: center;
 }
